--- a/src/app/members/page.module.css
+++ b/src/app/members/page.module.css
@@ -1,12 +1,12 @@
 
 .membersContainer {
-    margin: 0 auto;
+    margin: 0 100px;
+    padding-top: 20px;
 }
 
 .membersActionContainer {
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    overflow: auto;
+    padding: 10px;
 }
 
 .membersTable {
