--- a/src/app/members/[memberId]/page.module.css
+++ b/src/app/members/[memberId]/page.module.css
@@ -2,6 +2,12 @@
 .membersContainer {
     margin: 0 100px;
     padding-top: 20px;
+    @media only screen and (min-width: 768px) {
+        margin: 0 50px;
+    }
+    @media only screen and (max-width: 768px) {
+        margin: 0;
+    }
 }
 
 .memberNameRow {
