wip: a/u/d member and a/u/d signup complete
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/src/app/members/page.module.css
+++ b/src/app/members/page.module.css
@@ -18,3 +18,11 @@
 .membersTable {
     min-width: 650px;
 }
+
+.groupNameContainer {
+    display: flex;
+    gap: 7px;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+}
