--- a/src/app/groups/_components/AddUpdateGroupDialog/page.module.css
+++ b/src/app/groups/_components/AddUpdateGroupDialog/page.module.css
@@ -1,11 +1,10 @@
 
 .formContainer {
-    padding: 15px;
-    min-width: 400px;
+    min-width: 400px !important;
 }
 
 .formButtonContainer {
-    display: flex;
-    padding-top: 30px;
-    justify-content: center;
+    display: flex !important;
+    justify-content: center !important;
+    padding-bottom: 15px !important;
 }
