wip: option add/update and group member role
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/src/app/groups/[groupId]/_components/AddUpdateGroupMembersDialog/page.module.css
+++ b/src/app/groups/[groupId]/_components/AddUpdateGroupMembersDialog/page.module.css
@@ -13,7 +13,17 @@
     max-width: 600px;
 }
 
+.memberName {
+    padding: 5px;
+    width: 550px;
+}
+
 .memberSelect {
+    margin-top: 5px;
+    width: 550px;
+}
+
+.memberRoleSelect {
     margin-top: 5px;
     width: 550px;
 }
