--- a/src/app/options/page.module.css
+++ b/src/app/options/page.module.css
@@ -1,8 +1,17 @@
 
 .optionsContainer {
-
+    margin: 0 300px;
+    padding-top: 20px;
+    @media only screen and (min-width: 768px) and (max-width: 1280px) {
+        margin: 0 50px;
+    }
+    @media only screen and (max-width: 768px) {
+        margin: 0;
+    }
 }
 
 .actionContainer {
-
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
 }
